# mcs

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  options.cmake
block_device/: CMakeLists.txt  README.md
block_device/src/: CMakeLists.txt  Storage.cpp
block_device/src/block/: Count.cpp  ID.cpp  Range.cpp  Size.cpp
block_device/src/meta_data/: Blocks.cpp
block_device/src/storage/: with_range.cpp
config/: CMakeLists.txt  options.cmake
config/include/mcs/: config.hpp
core/: CMakeLists.txt  README.md
core/src/: CMakeLists.txt
core/src/memory/: Offset.cpp  Range.cpp  Size.cpp
core/src/segment/: ID.cpp
core/src/storage/: ID.cpp  Implement_C_API.cpp  MaxSize.cpp  Parameter.cpp
core/src/transport/: Address.cpp
iov_backend/: CMakeLists.txt
iov_backend/demo/campaign/: client.ENV  provider.ENV  storage.ENV
iov_backend/include/mcs/: IOV_Backend.hpp  IOV_Database.hpp  IOV_Meta.hpp  IOV_UUID.hpp
iov_backend/src/: CMakeLists.txt  Location.cpp  Locations.cpp  Parameter.cpp  Storage.cpp  UsedStorage.cpp  UsedStorages.cpp  iov_backend_ops.cpp
iov_backend/src/IOV/: Backend.cpp  Database.cpp  UUID.cpp
iov_backend/src/collection/: ID.cpp
iov_backend/src/command/: Locations.cpp  Range.cpp
iov_backend/src/detail/: Bitmap.cpp  SpanDeleter.cpp
iov_backend/src/provider/: State.cpp  StoragesClients.cpp
iov_backend/src/storage/: ID.cpp
nonstd/scope/: CMakeLists.txt
rpc/: CMakeLists.txt
rpc/src/: CMakeLists.txt  ScopedRunningIOContext.cpp
rpc/src/access_policy/: Concurrent.cpp  Exclusive.cpp  Sequential.cpp
rpc/src/detail/: Buffer.cpp  Completion.cpp  ResultOrError.cpp
rpc/src/error/: Completion.cpp  HandlerException.cpp  HandshakeFailed.cpp
rpc/src/multi_client/: Errors.cpp  ParallelCallsLimit.cpp
serialization/: CMakeLists.txt
serialization/src/: CMakeLists.txt  IArchive.cpp  OArchive.cpp
serialization/src/error/: AdditionalBytes.cpp  Load.cpp  Save.cpp
share_service/: CMakeLists.txt  README.md
share_service/src/: CMakeLists.txt  Chunk.cpp  shmem_client.cpp  tcp_provider.cpp
share_service/src/command/: Create.cpp  Remove.cpp
test/: CMakeLists.txt
test/block_device/: CMakeLists.txt  basics.cpp
test/core/: CMakeLists.txt  segment_create.cpp  share_in_the_same_process.cpp  storage_management.cpp
test/core/manage_segments_in_remote_process/: CMakeLists.txt  segment_create.cpp  segment_remove.cpp  test.cpp
test/core/manage_storage_in_remote_process/: CMakeLists.txt  storage_create.cpp  storage_remove.cpp  test.cpp
test/core/memory/: CMakeLists.txt  Offset.cpp  Range.cpp  Size.cpp
test/core/share_between_processes/: CMakeLists.txt  SupportedStorageImplementations.hpp  reverse_ints.cpp  test.cpp
test/core/storage/: CMakeLists.txt  MaxSize.cpp
test/core/transport/: CMakeLists.txt
test/iov_backend/: CMakeLists.txt  Parameter.cpp  UsedStorages.cpp  basics.cpp
test/iov_backend/detail/: Bitmap.cpp  CMakeLists.txt  Queue.cpp
test/iov_backend/performance/: CMakeLists.txt  collection_management.cpp  multiple_producers_and_multiple_consumers.cpp
test/iov_backend/provider/: CMakeLists.txt
test/nonstd/: CMakeLists.txt  scope.cpp
test/rpc/: CMakeLists.txt  Concepts.cpp  ScopedRunningIOContextNumberOfThreads.cpp  call.cpp  clients_must_support_a_prefix_of_the_provided_commands.cpp  count.cpp  drop_async_operation.cpp  drop_client_while_operation_is_in_progress.cpp  execution_order.cpp  kvs.cpp  many.cpp  many_concurrent_requests.cpp  messing_up_functions_with_the_same_signature_causes_an_error_during_handeshake.cpp  multi_client.cpp  multi_threaded_server.cpp  streaming_client.cpp  streaming_handler.cpp
test/serialization/: CMakeLists.txt  Concepts.cpp  OArchive_append_versus_stream.cpp  error.cpp  temporaries.cpp
test/serialization/STD/: CMakeLists.txt  List.cpp  Map.cpp  Optional.cpp  Set.cpp  String.cpp  Tuple.cpp  UnorderedMap.cpp  Variant.cpp  Vector.cpp
test/share_service/: CMakeLists.txt  shmem_client.cpp  test.generic.sh.in  test.tcp_provider.sh.in
test/share_service/create_cat_write_remove/: commands  expected_output
test/testing/: CMakeLists.txt  UniqID.cpp  UniqTemporaryDirectory.cpp  require_exception.cpp  until.cpp
test/testing/random/: CMakeLists.txt  one_of.cpp
test/util/: Buffer.cpp  CMakeLists.txt  HeterogeneousMap.cpp  MapWithHitMissCallbacks.cpp  RangesIterator.cpp  TaggedRange.cpp  TemporaryDirectory.cpp  TemporaryFile.cpp  cast.cpp  divru.cpp  fwd_capture.cpp  member_AUTO.cpp  not_null.cpp  select.cpp  true_once.cpp
test/util/ASIO/: CMakeLists.txt  Endpoint.cpp
test/util/FMT/: CMakeLists.txt  Concepts.cpp  WriteFileFailed.cpp
test/util/distribution/: CMakeLists.txt  equal.cpp
test/util/dlhandle/: CMakeLists.txt  library.cpp  library.hpp  test.cpp
test/util/read/: CMakeLists.txt  State.cpp  intrusive.cpp  one_of.cpp  prefix.cpp  string.cpp  uint.cpp
test/util/type/: At.cpp  CMakeLists.txt  ID.cpp  Index.cpp  List.cpp  Size.cpp  Tag.cpp
testing/: CMakeLists.txt
testing/bash/: TMP_DIRECTORY  cleanup  daemonize  random_data  wait
testing/src/: CMakeLists.txt  UniqID.cpp  UniqTemporaryDirectory.cpp
testing/src/RPC/: CMakeLists.txt  ProtocolState.cpp  options.cmake
testing/src/block_device/: CMakeLists.txt
testing/src/core/: CMakeLists.txt
testing/src/iov_backend/: CMakeLists.txt  IOV_Backend.cpp
testing/src/random/: Test.cpp  random_device.cpp  seed.cpp
util/: CMakeLists.txt
util/ASIO/: CMakeLists.txt
util/ASIO/demo/: CMakeLists.txt  client.cpp  provider.cpp
util/ASIO/src/: CMakeLists.txt  Connectable.cpp  SetSocketOptions.cpp
util/FMT/: CMakeLists.txt
util/hash/: CMakeLists.txt
util/heterogeneous_map/: CMakeLists.txt
util/read/: CMakeLists.txt
util/read/src/: CMakeLists.txt  ParseError.cpp
util/src/: CMakeLists.txt  Copy.cpp  DLHandle.cpp  ExistingPath.cpp  NonExistingPath.cpp  OpenFile.cpp  TemporaryDirectory.cpp  TemporaryFile.cpp  divru.cpp  fopen.cpp  read_file.cpp  select.cpp  touch.cpp  write_file.cpp
util/string/: CMakeLists.txt
util/syscall/: CMakeLists.txt
util/tuplish/: CMakeLists.txt
util/type/: CMakeLists.txt
(+808 files in other folders)
